--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,9 @@ name: zarrdata
 channels:
   - conda-forge
 dependencies:
-  - xarray=0.18
-  - pooch=1.3
+  - aiohttp=3.7
   - matplotlib=3
   - netcdf4=1.5
+  - pooch=1.3
+  - xarray=0.18
   - zarr=2.8
